<?xml version="1.0"?>
<package>
  <name>jsk_rqt_plugins</name>
  <version>2.1.5</version>
  <description>The jsk_rqt_plugins package</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/jsk-ros-pkg/jsk_visualization</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_visualization/issues</url>
  <url type="website">http://jsk-docs.readthedocs.io/en/latest/jsk_visualization/doc/jsk_rqt_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mk</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_plot</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_plot</run_depend>
  <run_depend>rqt_image_view</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>resource_retriever</run_depend>
  <!-- https://github.com/ros-perception/image_pipeline/pull/318 -->
  <run_depend version_gte="1.12.23">image_publisher</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend version_gte="4.3.0" >jsk_gui_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-urlgrabber</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>message_runtime</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
