<?xml version="1.0"?>
<package format="3">
  <name>jsk_rqt_plugins</name>
  <version>2.1.7</version>
  <description>The jsk_rqt_plugins package</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/jsk-ros-pkg/jsk_visualization</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_visualization/issues</url>
  <url type="website">http://jsk-docs.readthedocs.io/en/latest/jsk_visualization/doc/jsk_rqt_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mk</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <!-- https://github.com/ros-perception/image_pipeline/pull/318 -->
  <exec_depend version_gte="1.12.23">image_publisher</exec_depend>
  <exec_depend>image_view2</exec_depend>
  <exec_depend version_gte="4.3.0" >jsk_gui_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-urlgrabber</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-urlgrabber</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
