<?xml version="1.0"?>
<package format="3">
  <name>jsk_rviz_plugins</name>
  <version>2.1.7</version>
  <description>The jsk_rviz_plugins package</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>
  <author email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</author>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <url type="repository">http://github.com/jsk-ros-pkg/jsk_visualization</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_visualization/issues</url>
  <url type="website">http://jsk-docs.readthedocs.io/en/latest/jsk_visualization/doc/jsk_rviz_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>jsk_footstep_msgs</build_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>jsk_hark_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdfdom_py</build_depend>
  <build_depend>view_controller_msgs</build_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>jsk_footstep_msgs</exec_depend>
  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>jsk_hark_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_recognition_utils</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>posedetection_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>view_controller_msgs</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
